# goit_python_web_homework_10

./: README.md  pyproject.toml
hw_10/: manage.py
hw_10/hw_10/: settings.py  urls.py  wsgi.py
hw_10/quotes/: forms.py  models.py  urls.py  utils.py  views.py
hw_10/quotes/migrations/: 0001_initial.py  0002_author_user.py  0003_alter_aythor_fullname.py
hw_10/quotes/templates/quotes/: add_quote.html
hw_10/quotes/templatetags/: extract_authors.py
hw_10/users/: urls.py  views.py
hw_10/users/templates/users/: logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_subject.txt  signin.html  signup.html
hw_10/utils/: insert_quotes_to_mongo.py
